[gd_scene load_steps=8 format=3 uid="uid://1ilbs0t6e3ac"]

[ext_resource type="PackedScene" uid="uid://baifjlw8b376k" path="res://scenes/boss/damaging_boss_layer.tscn" id="1_foqt6"]
[ext_resource type="Texture2D" uid="uid://cwafmbmw0tkgx" path="res://assets/boss/Boss attack-Sheet.png" id="2_g7xe0"]
[ext_resource type="Script" path="res://scenes/boss/shooting_boss_layer.gd" id="2_xjfsw"]

[sub_resource type="Animation" id="Animation_7551p"]
resource_name = "RESET"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_44o27"]
resource_name = "shoot_left"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 3, 3, 6]
}

[sub_resource type="Animation" id="Animation_m1aoo"]
resource_name = "shoot_right"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8e7qm"]
_data = {
"RESET": SubResource("Animation_7551p"),
"shoot_left": SubResource("Animation_44o27"),
"shoot_right": SubResource("Animation_m1aoo")
}

[node name="ShootingBossLayer" instance=ExtResource("1_foqt6")]
script = ExtResource("2_xjfsw")
min_shoot_delay = 5.0
max_shoot_delay = 8.0
missle_speed = 100.0
missle_torque = 1.5

[node name="Sprite2D" parent="." index="1"]
texture = ExtResource("2_g7xe0")
hframes = 10

[node name="ShootTimer" type="Timer" parent="." index="5"]
one_shot = true

[node name="ShootAnimationPlayer" type="AnimationPlayer" parent="." index="6"]
libraries = {
"": SubResource("AnimationLibrary_8e7qm")
}

[node name="ShootDelay" type="Timer" parent="." index="7"]
wait_time = 2.0
one_shot = true

[node name="MissleSpawnPoint" type="Marker2D" parent="." index="8"]
position = Vector2(-59, 10)

[node name="SpikeSpawnPoint" type="Marker2D" parent="." index="9"]
position = Vector2(45, -2)

[connection signal="died" from="." to="." method="_on_died"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
